prost-unwrap-proto-tests/tests/ui/from_source_no_ident.stderr
error: Parameter must have 2 arguments
 --> tests/ui/from_source_no_ident.rs:5:28
  |
5 |     prost_unwrap::include!(from_source());
  |                            ^^^^^^^^^^^
